@@ -19,6 +19,7 @@ Changes in progress
 - xtec-mailer: Displayed reply-to parameter for admins to allow them to change it (Trello #1206)
 - xtec-mailer: Taken Reply-to from headers if specified (Trello #1206)
 - enllacos-educatius: Changed xtec.cat to xtec.gencat.cat (Trello #1207)
+- enllacos-educatius: Added links to Google Classroom and to Serveis Educatius (GitHub #241)
 - Added embed and iframe support in kses
 - buddypress-activity-plus: Upgraded from version 1.6.2 to 1.6.4 (Trello #1039)
 - buddypress + invite-anyone: Reviewed catalan translation (Trello #1209)
